# sky-Chat-mariadb

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  MARIADB_SETUP.md  QUICK_START.md  RAG_SETUP.md  README.md  add_alliance_docs.py  app.py  config.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-docker.bat  setup-docker.sh  setup_database.sh  setup_rag.py
docs/: REAL_METRICS.md  VECTOR_SEARCH_SETUP.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: AIThinkingProcess.jsx  AirportCard.jsx  CaseCard.jsx  CaseDetails.jsx  ChatMessage.jsx  Footer.jsx  Navbar.jsx  NetworkViewer.jsx  PerformanceMetrics.jsx  RouteCard.jsx  SearchTabs.jsx  SmartSuggestions.jsx  StatCard.jsx  TopDestinationsMap.jsx
frontend/src/data/: cases.js
frontend/src/pages/: About.jsx  Adventures.jsx  Analytics.jsx  Chat.jsx  Home.jsx  Search.jsx
frontend/src/services/: api.js
frontend/src/styles/: AIThinkingProcess.css  About.css  Adventures.css  AirportCard.css  Analytics.css  App.css  CaseCard.css  CaseDetails.css  Chat.css  ChatMessage.css  Footer.css  (+11 more)
public/: index.html
src/: __init__.py
src/database/: connection.py  import_data.py  setup.py
src/services/: airline_service.py  airport_service.py  chat_service.py  embedding_service.py  knowledge_base_builder.py  llm_service.py  rag_service.py  route_service.py  vector_search_service.py
src/utils/: performance.py
(+3 files in other folders)
