[project]
name = "sky-chat-mariadb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "mariadb==1.1.8",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.5.0",
]
